# py-json-stream-rs-tokenizer

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  build.rs  overflow_example.py  pyproject.toml  renovate.json  setup.py  stubtest-allowlist
.circleci/: config.yml
.github/workflows/: build.yml  test.yml
ci/: deep-rename-wheel.py  dummify-maturin-sdist.py
ci-utils/: after-build.sh  before-build-linux.sh  before-build-mac-win.sh  before-build-mac.sh  before-build-win.sh  before-build.sh  ensure-rust-linux.sh  ensure-rust-macos.sh  ensure-rust-win.sh
json_stream_rs_tokenizer/: __init__.py  json_stream_rs_tokenizer.pyi
json_stream_rs_tokenizer/benchmark/: __init__.py  __main__.py  app.py  cli.py  random_json_generator.py
src/: char_or_eof.rs  int.rs  json_string_reader.rs  lib.rs  opaque_seek.rs  park_cursor.rs  py_bytes_stream.rs  py_common.rs  py_err.rs  py_text_stream.rs  pyclass_boxed_suitable_stream.rs  read_rewind.rs  read_string.rs  remainder.rs  strings.rs  suitable_bytes_stream.rs  suitable_seekable_buffered_bytes_stream.rs  suitable_seekable_buffered_text_stream.rs  suitable_seekable_bytes_stream.rs  suitable_seekable_text_stream.rs  suitable_stream.rs  suitable_text_stream.rs  suitable_unbuffered_bytes_stream.rs  suitable_unbuffered_text_stream.rs  suitable_unseekable_buffered_bytes_stream.rs  suitable_unseekable_buffered_text_stream.rs  suitable_unseekable_bytes_stream.rs  suitable_unseekable_text_stream.rs  unicode_utils.rs  user_facing_json_string_reader.rs  utf8_char_source.rs
tests/: conftest.py  test_buffering.py  test_exceptions.py  test_integers.py  test_large_integers.py  test_limitations_info.py  test_load_iterable.py  test_overconsumption.py  test_string_streaming.py  test_unicode_surrogate_pairs.py  test_using_json_stream_tokenizer_tests.py  test_via_benchmark.py
