[package]
name = "json-stream-rs-tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "json_stream_rs_tokenizer"
crate-type = ["cdylib"]

[dependencies]
num-bigint = ">=0.4.3,<0.5"
pyo3 = { version = ">=0.16.5,<0.17", features = ["extension-module", "num-bigint"] }
pyo3-file = ">=0.5.0, <0.8"
thiserror = ">=1.0.37,<2"
utf8-chars = ">=2.0.2,<3"
compact_str = ">=0.7.1,<0.8"

[build-dependencies]
pyo3-build-config = { version = "= 0.16.6", features = ["resolve-config"] }

[patch.crates-io.pyo3-file]
git = 'https://github.com/smheidrich/pyo3-file.git'
branch = 'divide-buf-length-by-4-to-fix-textio-bug-forjsonstream'
