[package]
name = "json-stream-rs-tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "json_stream_rs_tokenizer"
crate-type = ["cdylib"]

[dependencies]
num-bigint = ">=0.4.3,<0.5"
owned_chars = ">=0.3.2,<0.4"
pyo3 = { version = ">=0.18,<0.19", features = ["num-bigint"] }
thiserror = ">=1.0.37,<2"
utf8-chars = ">=2.0.2,<3"
compact_str = ">=0.7.1, <0.10"
utf8-io = ">=0.16.0,<0.17"
#utf8-read = ">=0.4.0,<0.5"
utf8-read = { git = "https://github.com/smheidrich/utf8-read-rs.git", branch = "configurable-chunk-size" }
utf8-width = ">=0.1.6,<0.2"

[dev-dependencies]
rstest = ">=0.18.1,<0.19"

[build-dependencies]
pyo3-build-config = { version = "= 0.18.3", features = ["resolve-config"] }

# workaround for linkage errors when running cargo test:
# https://pyo3.rs/v0.18.1/faq#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
# XXX remove & move extension-module back to pyo3 dep above once solved on PyO3's side
# until then, cargo test has to be run with --no-default-features
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
