[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "json-stream-rs-tokenizer"
version = "0.3.1"
description = "A faster tokenizer for the json-stream Python library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "json-stream>=1.4,<2"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
benchmark = [
    "tqdm>=4.64,<5",
    "contexttimer>=0.3,<0.4",
    "si-prefix>=1.2<2",
    "typer>=0.6,<0.7",
]
test = ["pytest>7.1,<8"]

[project.urls]
Repository = "https://github.com/smheidrich/py-json-stream-rs-tokenizer"
